# zigzag

./: LICENSE  README.md  pyproject.toml
src/zigzag/: .env.example  __init__.py  settings.py
src/zigzag/agents/: react.py
src/zigzag/prompts/: __init__.py
